Splash Screen with Permission

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -47,5 +47,9 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+    <string>We need your location to track and update data.</string>
+    <key>NSLocationWhenInUseUsageDescription</key>
+    <string>We need your location to track and update data.</string>
 </dict>
 </plist>
